lazy class button added to code smell menu

--- a/src/pckgInterface/frmCodeSmellMenu.form
+++ b/src/pckgInterface/frmCodeSmellMenu.form
@@ -28,11 +28,16 @@
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" alignment="0" attributes="0">
               <EmptySpace min="-2" pref="103" max="-2" attributes="0"/>
-              <Component id="btnLongMethods" min="-2" pref="138" max="-2" attributes="0"/>
-              <EmptySpace max="-2" attributes="0"/>
-              <Component id="btnLargeMethods" min="-2" pref="138" max="-2" attributes="0"/>
-              <EmptySpace max="-2" attributes="0"/>
-              <Component id="btnLongParameterList" min="-2" pref="138" max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="0" attributes="0">
+                  <Component id="btnLazyClassDetector" min="-2" pref="138" max="-2" attributes="0"/>
+                  <Group type="102" attributes="0">
+                      <Component id="btnLongMethods" min="-2" pref="138" max="-2" attributes="0"/>
+                      <EmptySpace max="-2" attributes="0"/>
+                      <Component id="btnLargeMethods" min="-2" pref="138" max="-2" attributes="0"/>
+                      <EmptySpace max="-2" attributes="0"/>
+                      <Component id="btnLongParameterList" min="-2" pref="138" max="-2" attributes="0"/>
+                  </Group>
+              </Group>
               <EmptySpace pref="139" max="32767" attributes="0"/>
           </Group>
       </Group>
@@ -46,7 +51,9 @@
                   <Component id="btnLargeMethods" alignment="0" min="-2" pref="66" max="-2" attributes="0"/>
                   <Component id="btnLongMethods" alignment="0" min="-2" pref="66" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace pref="355" max="32767" attributes="0"/>
+              <EmptySpace max="-2" attributes="0"/>
+              <Component id="btnLazyClassDetector" min="-2" pref="66" max="-2" attributes="0"/>
+              <EmptySpace pref="283" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -66,6 +73,14 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Long Parameter List"/>
       </Properties>
+    </Component>
+    <Component class="javax.swing.JButton" name="btnLazyClassDetector">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Lazy Class Detector"/>
+      </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnLazyClassDetectorActionPerformed"/>
+      </Events>
     </Component>
   </SubComponents>
 </Form>
